maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:24: error: '=' expected but ')' found.
def auNordChef()){
                ^IslandMaze:32: error: illegal start of simple expression
}
^